# smol-bytes

./: .codecov.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README-zh_CN.md  README.md  TASK.md  pyproject.toml
.github/workflows/: ci.yml  loc.yml  python.yml  wasm.yml
ci/: sanitizer.sh
crates/smol-bytes/: BENCHMARK_SUMMARY.md  Cargo.toml  INLINE_CAPACITY_UPGRADE.md
crates/smol-bytes/benches/: advance.rs  clone.rs  constructor.rs  copy_to_bytes.rs  run_benchmarks.sh  slice.rs  split_off.rs  split_to.rs
crates/smol-bytes/examples/: quickstart.rs
crates/smol-bytes/src/: buffer.rs  bytes.rs  bytes_mut.rs  error.rs  lib.rs  macros.rs  python.rs  smol_bytes.rs  smol_bytes_mut.rs  utf8_buf.rs  utf8_buffer.rs  utf8_bytes.rs  utf8_bytes_mut.rs  utils.rs
crates/smol-bytes/src/buffer/: borsh.rs  cmp.rs  fmt.rs  from.rs  io.rs  iter.rs  ops.rs  python.rs  quickcheck.rs  serde.rs  wasm.rs
crates/smol-bytes/src/bytes/: raw.rs  strategy.rs
crates/smol-bytes/src/bytes/raw/: arbitrary.rs  borsh.rs  cmp.rs  fmt.rs  from.rs  iter.rs  ops.rs  quickcheck.rs  serde.rs
crates/smol-bytes/src/bytes/strategy/: compact.rs  shared.rs
crates/smol-bytes/src/bytes/strategy/compact/: python.rs
crates/smol-bytes/src/bytes/strategy/shared/: python.rs  wasm.rs
crates/smol-bytes/src/bytes_mut/: arbitrary.rs  borsh.rs  cmp.rs  fmt.rs  from.rs  iter.rs  ops.rs  python.rs  quickcheck.rs  serde.rs  wasm.rs
crates/smol-bytes/src/smol_bytes/: borsh.rs  raw.rs  strategy.rs  tests.rs
crates/smol-bytes/src/smol_bytes/raw/: borsh.rs
crates/smol-bytes/src/smol_bytes/strategy/: compact.rs  conversion_friendly.rs  inline.rs  shared.rs
crates/smol-bytes/src/utf8_buffer/: arbitrary.rs  borsh.rs  cmp.rs  fmt.rs  from.rs  ops.rs  python.rs  quickcheck.rs  serde.rs  wasm.rs
crates/smol-bytes/src/utf8_bytes/: arbitrary.rs  borsh.rs  cmp.rs  fmt.rs  from.rs  ops.rs  python.rs  quickcheck.rs  serde.rs  wasm.rs
crates/smol-bytes/src/utf8_bytes_mut/: arbitrary.rs  borsh.rs  cmp.rs  from.rs  python.rs  quickcheck.rs  serde.rs
crates/smol-bytes/tests/: smol_bytes.rs  test_buf.rs  test_buf_mut.rs  test_buffer.rs  test_bytes.rs  test_chain.rs  test_compact_bytes.rs  test_compact_chain.rs  test_compact_take.rs  test_iter.rs  test_serde.rs  test_split_after_advance.rs  test_strategy_differences.rs  test_take.rs  test_truncate_after_advance.rs  test_utf8.rs
docs/superpowers/plans/: 2026-04-12-pyo3-production-ready.md  2026-04-12-wasm-bindgen.md
docs/superpowers/specs/: 2026-04-12-pyo3-bindings-design.md  2026-04-12-wasm-bindgen-design.md
js/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/pkg/: package.json  smol_bytes.d.ts  smol_bytes.js  smol_bytes_bg.js  smol_bytes_bg.wasm  smol_bytes_bg.wasm.d.ts
js/scripts/: verify-package.mjs
js/src/: compact.d.ts  index.ts  shared.d.ts  shared.js
js/tests/: smol_bytes.test.ts
python/smol_bytes/: __init__.py  __init__.pyi
python/smol_bytes/compact/: __init__.py  __init__.pyi
python/smol_bytes/shared/: __init__.py  __init__.pyi
smol-bytes/: Cargo.toml
smol-bytes-py/: Cargo.toml
smol-bytes-py/src/: lib.rs
smol-bytes-wasm/: Cargo.toml
smol-bytes-wasm/src/: lib.rs
smol-bytes/benches/: advance.rs  buffer.rs  bytes_mut.rs  clone.rs  constructor.rs  copy_to_bytes.rs  run_benchmarks.sh  slice.rs  split_off.rs  split_to.rs  utf8.rs
smol-bytes/examples/: quickstart.rs
smol-bytes/src/: buffer.rs  bytes_mut.rs  error.rs  lib.rs  macros.rs  python.rs  utf8_buf.rs  utf8_buffer.rs  utf8_bytes.rs  utf8_bytes_mut.rs  wasm.rs  wasm_iter.rs
smol-bytes/src/buffer/: arbitrary.rs  from.rs  io.rs  iter.rs  ops.rs  python.rs  quickcheck.rs  wasm.rs
smol-bytes/src/bytes/: raw.rs  strategy.rs
smol-bytes/src/bytes/raw/: arbitrary.rs  borsh.rs  fmt.rs  ops.rs  quickcheck.rs  serde.rs
smol-bytes/src/bytes/strategy/: compact.rs  shared.rs
smol-bytes/src/bytes/strategy/compact/: python.rs  wasm.rs
smol-bytes/src/bytes/strategy/shared/: python.rs
smol-bytes/src/bytes_mut/: borsh.rs  fmt.rs  ops.rs  python.rs  serde.rs
smol-bytes/src/utf8_buffer/: arbitrary.rs  cmp.rs  ops.rs  python.rs  wasm.rs
smol-bytes/src/utf8_bytes/: arbitrary.rs  from.rs  python.rs  quickcheck.rs  serde.rs  wasm.rs
smol-bytes/src/utf8_bytes_mut/: fmt.rs  from.rs  ops.rs  python.rs  serde.rs  wasm.rs
smol-bytes/tests/: test_buf.rs  test_buf_mut.rs  test_buffer.rs  test_bytes.rs  test_compact_bytes.rs  test_compact_chain.rs  test_compact_take.rs  test_debug.rs  test_errors.rs  test_properties.rs  test_serde.rs  test_trait_cmp.rs  test_trait_fmt.rs  test_utf8.rs
tests/python/: test_smol_bytes.py
