[workspace]
resolver = "3"
members = [
  "smol-bytes",
  "smol-bytes-py",
  "smol-bytes-wasm",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
version = "0.1.2"
repository = "https://github.com/al8n/smol-bytes"
homepage = "https://github.com/al8n/smol-bytes"
description = "High-performance, clone-efficient byte buffers optimized for small data."
rust-version = "1.85"
keywords = ["bytes", "buffer", "inline", "no-std", "small"]
categories = ["data-structures", "no-std", "memory-management"]
readme = "README.md"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(coverage)',
] }

[profile.release]
lto = true
codegen-units = 1
