[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "smol-bytes"
dynamic = ["version"]
requires-python = ">=3.11"
description = "High-performance, clone-efficient byte buffers optimized for small data"
license = "MIT OR Apache-2.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
]

[tool.maturin]
features = ["pyo3"]
module-name = "smol_bytes._smol_bytes"
python-source = "python"
manifest-path = "smol-bytes-py/Cargo.toml"
