[package]
name = "smol-bytes-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Python extension module for smol-bytes."
publish = false

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[features]
pyo3 = ["dep:pyo3", "smol-bytes/pyo3"]

[dependencies]
smol-bytes = { path = "../smol-bytes", default-features = false }
pyo3 = { version = "=0.29.0", default-features = false, features = ["macros", "extension-module", "abi3-py311"], optional = true }
