[package]
name = "smol-bytes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
alloc = []
std = ["bytes/default"]
serde = ["dep:serde"]
borsh = ["dep:borsh"]
arbitrary = ["dep:arbitrary"]

[dependencies]
bytes = { version = "1", default-features = false }
serde = { version = "1", optional = true, default-features = false }
borsh = { version = "1", optional = true, default-features = false }
arbitrary = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"], default-features = false }
