[package]
name = "smol-bytes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["std"]
alloc = []
std = ["bytes/default"]
serde = ["dep:serde_core"]
borsh = ["dep:borsh"]
arbitrary = ["dep:arbitrary"]

[dependencies]
bytes = { version = "1", default-features = false }
serde_core = { version = "1", optional = true, default-features = false }
borsh = { version = "1", optional = true, default-features = false }

arbitrary = { version = "1", optional = true, default-features = false }
quickcheck = { version = "1", optional = true, default-features = false }

[dev-dependencies]
proptest = "1"
serde_json = "1"
serde_core = { version = "1", default-features = false }
criterion = { version = "0.7", features = ["html_reports", "cargo_bench_support"] }
serde_test = "1"


[[bench]]
name = "clone"
harness = false

[[bench]]
name = "constructor"
harness = false

[[bench]]
name = "advance"
harness = false

[[bench]]
name = "split_to"
harness = false

[[bench]]
name = "split_off"
harness = false

[[bench]]
name = "copy_to_bytes"
harness = false

[[bench]]
name = "slice"
harness = false
