[package]
name = "smol-bytes"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[features]
default = ["std"]
alloc = ["serde_core?/alloc", "bytes"]
std = ["bytes/default", "serde_core?/default"]
serde = ["dep:serde_core"]
borsh = ["dep:borsh"]
arbitrary = ["dep:arbitrary"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "std"]

[dependencies]
bytes = { version = "1", default-features = false, optional = true }
paste = "1"

serde_core = { version = "1", optional = true, default-features = false }
borsh = { version = "1", optional = true, default-features = false }

arbitrary = { version = "1", optional = true, default-features = false }
quickcheck = { version = "1", optional = true, default-features = false }

pyo3 = { version = "0.28", default-features = false, features = ["macros", "extension-module", "abi3-py311"], optional = true }
wasm-bindgen = { version = "0.2", default-features = false, features = ["strict-macro"], optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
proptest = "1"
serde_json = "1"
serde_core = { version = "1", default-features = false }
criterion = { version = "0.8", features = ["html_reports", "cargo_bench_support"] }
serde_test = "1"
smol_str = "0.3"
faststr = "0.2"

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "constructor"
harness = false

[[bench]]
name = "advance"
harness = false

[[bench]]
name = "split_to"
harness = false

[[bench]]
name = "split_off"
harness = false

[[bench]]
name = "copy_to_bytes"
harness = false

[[bench]]
name = "slice"
harness = false
